[package]
name = "market_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.72"
num_cpus = "1.13.0"
thiserror = "1.0.30"
dotenv = "0.15.0"
env_logger = "0.9.0"
chrono = "0.4.19"
actix = "0.12.0"
futures = "0.3.18"
actix-web = "4.0.0-beta.13"
sea-orm = { version = "^0.6", features = [  "sqlx-mysql",
    "runtime-actix-rustls", "macros" ], default-features = false }
    
config = "0.11.0"
serde = { version = "1.0.130", default-features = false, features = ["derive"] }
web3 = { version = "0.17.0", default-features = false, features = [
    "http-rustls-tls",
] }
log = { version = "0.4.14", features = ["std", "serde"] }
actix-web-actors = "4.0.0-beta.7"